syntax = "proto3";

package clientpb;

option go_package = "github.com/xlcbingo1999/goraft/pkg/clientpb";

enum Operate {
    PUT = 0;
    DELETE = 1;
    CONFIG = 3;
}

enum ConfigType {
    ADD_NODE = 0;
    REMOVE_NODE = 1;
}

message Auth {
    string token = 1;
}

message KvPair {
    bytes key = 1;
    bytes value = 2;
}

message ReadonlyQuery {
    bytes key = 1;
}

message PutCommand {
    repeated KvPair data = 1;
}

message DeleteCommand {
    repeated bytes keys = 1;
}

message ConfigCommand {
    ConfigType type = 2;
    map<string, string> servers = 3;
}

message Command {
    Operate operate = 1;
    PutCommand put = 2;
    DeleteCommand delete = 3;
    ConfigCommand config = 4;
}

message Request {
    uint64 clientId = 1;
    uint64 seq = 2;
    Command cmd = 3;
    ReadonlyQuery query = 4;
}

message Response {
    bool success = 1;
    repeated KvPair data = 3;
    uint64 clientId = 2;
    string msg = 4;
    string leader = 5;
}

service GoRaft {
    rpc register(Auth) returns (Response) {}
    rpc get(ReadonlyQuery) returns (Response) {}
    rpc put(Request) returns (Response) {}
    rpc delete(Request) returns (Response) {}
    rpc config(Request) returns (Response) {}
}